# vanilla

./: .gitignore  CMakeLists.txt
lib/: vanilla.c  vanilla.h
lib/gamepad/: audio.c  command.c  gamepad.c  gamepad.h  input.c  video.c
pipe/: def.h  ports.h
pipe/linux/: wpa.c
rpi/: CMakeLists.txt  main.c  platform.c
rpi/game/: game_decode.c  game_main.c
rpi/menu/: menu_game.c
rpi/ui/: ui_priv.h  ui_sdl.c
